<resources>
    <string name="app_name" translatable="false">Eggenda</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="gallery_choice">Choose from Gallery</string>
    <string name="photo_choice">Take a Photo</string>
    <string name="settings_title">Settings</string>
    <string name="game_start">Start</string>
    <string name="game_label">Game</string>
    <string name="display_name" translatable="false">John Smith</string>
    <string name="hatch_progress">Hatch Progress: ??%</string>
    <string name="new_quest">New Quest</string>
    <string name="quest_board">Quest Board</string>
    <string name="nq_title">New Quest</string>
    <string name="nq_subtitle">Make your quest easier with our reminders</string>
    <string name="deadline">Deadline</string>
    <string name="date">DD/MM/YY</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="experience">Experience: 0/100</string>
    <string name="gain_xp">Gain XP</string>
    <string name="task">Task</string>
    <string name="create_a_task">Create a task</string>
    <string name="time_limit">Time Limit</string>
    <string name="time_format">HH:MM:SS</string>
    <string name="details">Details</string>
    <string name="write_here">Write here...</string>
    <string name="attachments">Attachments</string>
    <string name="max_20mb">Max 20mb</string>
    <string name="user_profile_header">User Profile</string>
    <string name="language_header">Language</string>
    <string name="conditions_header" translatable="false">Terms and Conditions</string>
    <string name="edit_button">Edit</string>
    <string name="username_header">Username</string>
    <string name="username_hint" translatable="false">JohnSmith</string>
    <string name="first_name_header">First Name</string>
    <string name="first_name_hint" translatable="false">John</string>
    <string name="last_name_header">Last Name</string>
    <string name="last_name_hint" translatable="false">Smith</string>
    <string name="e_mail_phone_header">E-mail/Phone</string>
    <string name="e_mail_phone_hint" translatable="false">E-mail/Phone</string>
    <string name="date_of_birth_header">Date of Birth</string>
    <string name="birth_hint" translatable="false">dd/mm/yy</string>
    <string name="country_header">Country</string>
    <string name="country_hint" translatable="false">ex. Canada</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout">Log Out</string>
    <string name="terms_conditions_details" translatable="false">terms and conditions</string>
    <string name="game">Start Game</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="log_out">Log Out</string>
    <string name="new_to_eggenda">New to Eggenda?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="password_empty">Password Empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="quests">Quests</string>
    <string name="eggs">Eggs</string>
    <string name="pets">Pets</string>
    <string name="character" translatable="false">Character</string>
    <string name="points">Points</string>


    <string name="choose_attack_type_description">Attack Type</string>
    <string name="atk_type_stay">Stay</string>
    <string name="atk_type_return">Return</string>
    <string name="atk_type_bounce">Bounce</string>

    <string name="atk_count_des">Count</string>
    <string name="resume" translatable="false">RESUME</string>
    <string name="expired">Expired</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_doesn_t_exist">User doesn\'t exist</string>
    <string name="username_is_empty">Username is Empty</string>
    <string name="customization">Customization</string>
    <string name="showcase">Showcase</string>
    <string name="rankings">Rankings</string>
    <string name="rank_header1">Your Journey to the</string>
    <string name="rank_header2">Top Starts Here!</string>
    <string name="your_settings_so_that_you_are_comfortable">Your settings so that you are comfortable</string>
    <string name="about">About Us</string>
    <string name="about_description">Our Eggenda team is motivated to make you happy! We wish to help you produce a healthy work-life balance as we celebrate achievements - both professional and personal. Explore our website to learn more about us and our journey!</string>
    <string name="discover_us">Discover Us</string>
    <string name="delete">Delete</string>

    <string-array name="language_options">
        <item>English</item>
        <item>Chinese</item>
        <item>Japanese</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>zh</item>
        <item>ja</item>
    </string-array>

</resources>