<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eggenda.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.eggenda.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_rankings"
        android:name="com.example.eggenda.ui.ranks.RankFragment"
        android:label="@string/rankings"
        tools:layout="@layout/fragment_rank"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.eggenda.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@xml/preference"/>

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.eggenda.ui.game.GameFragment"
        android:label="@string/game_label"
        tools:layout="@layout/fragment_game"/>
</navigation>