<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFEBCC"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Back Button -->
    <Button
        android:id="@+id/back_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/back_arrow"
        android:paddingHorizontal="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="32dp" />

    <!-- Header and Subtitle -->
    <TextView
        android:id="@+id/nq_header"
        android:textColor="#000000"
        android:textSize="40sp"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="33dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fontFamily="@font/titan_one"
        android:text="@string/nq_title" />

    <TextView
        android:id="@+id/nq_subtitle"
        android:textColor="#4A3109"
        android:textSize="13sp"
        android:layout_marginBottom="23dp"
        android:layout_marginStart="32dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/nq_subtitle" />

    <!-- Task Input Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#4A3109"
            android:text="@string/task"
            android:textSize="20sp"
            android:fontFamily="@font/titan_one" />

        <EditText
            android:id="@+id/edit_task"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"
            android:text="@string/create_a_task"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/dangrek_font"/>
    </LinearLayout>

    <!-- Time Limit Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#4A3109"
            android:text="@string/time_limit"
            android:textSize="20sp"
            android:fontFamily="@font/titan_one" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/edit_time_limit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:background="@drawable/edit_text_border"
                android:text="@string/time_format"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/dangrek_font"/>

            <ImageView
                android:id="@+id/clock"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="300dp"
                android:src="@drawable/clock"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

        </FrameLayout>

    </LinearLayout>

    <!-- Details Input Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#4A3109"
            android:text="@string/details"
            android:textSize="20sp"
            android:fontFamily="@font/titan_one" />

        <EditText
            android:id="@+id/edit_details"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"
            android:text="@string/write_here"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/dark_blue"
            android:fontFamily="@font/dangrek_font"/>
    </LinearLayout>

    <!-- Attachments Input Field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#4A3109"
            android:text="@string/attachments"
            android:textSize="20sp"
            android:fontFamily="@font/titan_one" />

        <TextView
            android:id="@+id/edit_attachment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:background="@drawable/edit_text_border"
            android:text="@string/max_20mb"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/dangrek_font"/>
    </LinearLayout>

    <!-- Add and Cancel Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_task_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:background="@drawable/oval_btn_background"
            android:text="Add"
            android:textSize="15sp"
            android:fontFamily="@font/titan_one" />

        <Button
            android:id="@+id/cancel_task_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_btn_background"
            android:text="Cancel"
            android:textSize="15sp"
            android:fontFamily="@font/titan_one" />
    </LinearLayout>
</LinearLayout>
